# python-project-template

./: .gitignore  LICENSE  Pipfile  README.md  lint.sh  pyproject.toml  run.sh  settings.toml  test.sh
newproject/: __main__.py  hello_world.py
tests/: test_newproject.py
