[project]
name = "newproject"
version = "0.1.0"
description = "Quick starting point for a respectable Python project"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yaniv Mordekhay", email = "yanivmo@users.noreply.github.com" }
]
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/yanivmo/python-project-template"
repository = "https://github.com/yanivmo/python-project-template"

[project.scripts]
newproject = "newproject"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
dynaconf = "^3.1.12"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
